Another attempt at fixing connections. Fixed imports and other things.